--- a/style.css
+++ b/style.css
@@ -199,7 +199,7 @@ article img {
     
     
     .hero-post {
-    background: black url(/imgs/blog-image-hero.jpg);
+    background: black url(/images/blog-image-hero.jpg);
     background-size: cover;
     background-position: top;
     }
